Update meta description

--- a/likes/books/index.html
+++ b/likes/books/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Filippo Corti | Library
+title: Filippo Corti | Bookshelf
 id: library
-excerpt: Some of my favourite books
+excerpt: Books that I liked, that I tend to frequently recommend. Mostly sad books and Russian novels.
 ---
 <h2 class="no-margin-top baffle">Favourites</h2>
 
