--- a/likes/books/reading/index.html
+++ b/likes/books/reading/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Filippo Corti | Reading
 id: reading
-excerpt: Books I've been reading
+excerpt: Books I've been reading, and liked, collected with excerpts. Mostly fiction, and mostly sad.
 ---
 
 <section class="introduction">
@@ -18,8 +18,6 @@ excerpt: Books I've been reading
 
 
 </section>
-
-{% include newsletter.html %}
 
 <section class="reading">
 
