--- a/work/cv/index.html
+++ b/work/cv/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Filippo Corti | CV
 id: cv
-excerpt: What I do, and what I've done
+excerpt: Filippo Corti's personal CV. I'm a UX/UI designer and web developer.
 ---
 <div>
   <a href="../" class="btn-back">
