--- a/likes/movies/index.html
+++ b/likes/movies/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Filippo Corti | Library
+title: Filippo Corti | Movie library
 id: library
-excerpt: Some of my favourite books
+excerpt: Some of Filippo's favourite movies.
 ---
 <h2 class="no-margin-top baffle">Favourites</h2>
 
