Update homepage links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ id: home
 <div class="home-intro full-screen no-margin-bottom">
 
   <h2 class="no-margin-top typed-home">
-    <span class="typed"></span>
+    <span rel="me" class="h-card typed">Filippo Corti</span>
   </h2>
 
   <div class="no-margin-bottom">
