--- a/404/index.html
+++ b/404/index.html
@@ -2,7 +2,8 @@
 layout: empty
 id: 404
 ---
-<h2 class="no-margin-top error-message"><span>Sorry, the page you're looking for doesn't exist <span class="kamojii">¯\_(ツ)_/¯</span></span></h2>
-<h1 class="return-link no-margin-top"><a href="https://www.filippocorti.net/"><i class="icon icon-angle-left"></i> Visit home</a></h1>
-
+<h2 class="no-margin-top error-message">
+  <span>Sorry, the page you're looking for doesn't exist <span class="kamojii">¯\_(ツ)_/¯</span>
+  </span>
+</h2>
 <script src="{{site.baseurl}}/js/scripts.js" defer></script>
