--- a/clicks/index.html
+++ b/clicks/index.html
@@ -6,18 +6,21 @@ excerpt: Excursions around the web
 ---
 <section class="introduction">
 
-  <h2 class="no-margin-top"><i class="icon icon-mouse"></i> Clicks</h2>
+  <h2 class="no-margin-top">Clicks</h2>
+
+  <nav class="subnav">
+    <ul>
+      <li><a href="https://blog.filippo.me">notes</a></li>
+      <li><a href="" class="active"><i class="icon icon-mouse"></i> clicks</a></li>
+    </ul>
+  </nav>
 
   <p class="attention-grabber no-margin-bottom">
     A stream of things I've been reading, online.
     Some end up in <a href="http://blog.filippo.me">my blog</a>.
-    There's also an <i class="icon icon-rss-square text-link-color"></i>
-    <a href="http://feeds.eppol.net/orpolina">RSS feed</a>.
   </p>
 
 </section>
-
-{% include newsletter.html %}
 
 <div id="bookmarks">
   <div class="spinner">
