--- a/colophon/index.html
+++ b/colophon/index.html
@@ -51,10 +51,10 @@ excerpt: Behind the scenes of this website
   starter kit.
 </p>
 
-<h4 class="text-center font-primary text-light">Nitti Grotesk (light)</h4>
 <h4 class="text-center font-primary text-regular">Nitti Grotesk (regular)</h4>
-<h4 class="text-center font-primary text-semibold">Nitti Grotesk (semibold)</h4>
-<h4 class="text-center font-secondary">Input Mono (regular)</h4>
+<h4 class="text-center font-primary text-bold">Nitti Grotesk (bold)</h4>
+<h4 class="text-center font-secondary text-regular">Input Mono (regular)</h4>
+<h4 class="text-center font-secondary text-bold">Input Mono (bold)</h4>
 
 <h3>Credits 😘 </h3>
 
