--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ id: home
     <p class="attention-grabber no-margin-bottom">
       Product designer and web developer from Italy, based in London.
       I've been keeping a blog since 2005: it's called
-      <a href="https://bicyclemind.it">bicyclemind</a> and it's not about bicycles;
+      <a href="https://www.bicyclemind.com">bicyclemind</a> and it's not about bicycles;
       it's about computers. When I'm not moving pixels in front of a screen
       I like to <a href="/likes/books/reading">read sad books</a>.
     </p>
